@@ -25,9 +25,9 @@ KEY_DICARD = [KEY_START, KEY_A]
 
 KEY_DISCARD = [KEY_START, KEY_X]
 KEY_SPRINT = [KEY_LT]
-KEY_SHOOT = [KEY_A]
+KEY_SHOOT = [KEY_X]
 KEY_GRUNT = [KEY_B]
-KEY_USE = [KEY_X]
+KEY_USE = [KEY_A]
 KEY_DROP = [KEY_Y]
 
 
