@@ -4,8 +4,9 @@
 
 * Inventar hinzugefügt
 * Launcher hinzugefügt
-* Kleinere Änderungen an der Map
 * KI der Totenköpfe verbessert
+* Controller-Support hinzugefügt (unvollständig)
+* Kleinere Änderungen an der Map
 * Screenshot-Funktion verbessert
 
 ## Alpha 006 (01.03.2024)
